--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -12,17 +12,17 @@ runtimeConfig:
 
 environmentVariables:
   - variable: VITE_FIREBASE_API_KEY
-    secret: "AIzaSyBdc7wyTy18etoxdGmXHgRsYJvHICbolR8"
+    value: "AIzaSyBdc7wyTy18etoxdGmXHgRsYJvHICbolR8"
   - variable: VITE_FIREBASE_AUTH_DOMAIN
-    secret: "sapa-nr.firebaseapp.com"
+    value: "sapa-nr.firebaseapp.com"
   - variable: VITE_FIREBASE_PROJECT_ID
-    secret: "sapa-nr"
+    value: "sapa-nr"
   - variable: VITE_FIREBASE_STORAGE_BUCKET
-    secret: "sapa-nr.firebasestorage.app"
+    value: "sapa-nr.firebasestorage.app"
   - variable: VITE_FIREBASE_MESSAGING_SENDER_ID
-    secret : "579859985153"
+    value : "579859985153"
   - variable : VITE_FIREBASE_APP_ID
-    secret : "1:579859985153:web:c5503f00d5fa08bead6100"
+    value : "1:579859985153:web:c5503f00d5fa08bead6100"
 
 # Environment variables and secrets.
 # env:
