--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,23 @@ yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
 
+node_modules
+dist
+dist-ssr
+*.local
+.env
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 # Firebase cache
 .firebase/
 
