--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -29,5 +29,5 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SAPA_NR }}
           channelId: live
-          projectId: sapa-project
+          projectId: sapa-nr
           entryPoint: ./sapa-project
